Fix all known bugs