@@ -73,20 +73,18 @@ import ai.timefold.solver.core.impl.util.Triple;
 public final class IndexerFactory<Right_> {
 
     private final AbstractJoiner<Right_> joiner;
-    private final boolean requiresRandomAccess; // Neighborhoods with enumerating joiners require random access.
     /**
-     * The number of leading {@link JoinerType#EQUAL} joiners. The comber reorders joiners equal-first
-     * (see {@code reorderedEqualsFirst()}), so all equal joiners form a single run at the front; this is
-     * its length (0 if the joiner starts with a non-equal joiner). The equal run is merged into one indexer
-     * level (the composite key); every remaining joiner becomes its own single-key level.
+     * The number of leading {@link JoinerType#EQUAL} joiners.
+     * The comber reorders joiners equal-first (see {@code reorderedEqualsFirst()}),
+     * so all equal joiners form a single run at the front;
+     * this is its length (0 if the joiner starts with a non-equal joiner).
+     * The equal run is merged into one indexer level (the composite key);
+     * every remaining joiner becomes its own single-key level.
      */
     private final int equalPrefixLength;
 
     public IndexerFactory(AbstractJoiner<Right_> joiner) {
         this.joiner = joiner;
-        // TODO Code encapsulation: remove the field requiresRandomAccess and call joiner.requireRandomAccess() instead?
-        // TODO It also impacts the flip(). Is requiresRandomAccess a good name?
-        this.requiresRandomAccess = joiner instanceof DefaultBiNeighborhoodsJoiner<?, Right_>;
         var joinerCount = joiner.getJoinerCount();
         var prefix = 0;
         while (prefix < joinerCount && joiner.getJoinerType(prefix) == JoinerType.EQUAL) {
@@ -96,9 +94,11 @@ public final class IndexerFactory<Right_> {
     }
 
     /**
-     * The end-exclusive boundary of each indexer level, top-to-bottom: the merged equal-prefix level
-     * (length {@link #equalPrefixLength}, when {@code >= 1}) followed by one single-joiner level each.
-     * Empty when the joiner has no joiners. For {@code [EQUAL, EQUAL, LESS_THAN]} this is {@code [2, 3]}
+     * The end-exclusive boundary of each indexer level, top-to-bottom:
+     * the merged equal-prefix level (length {@link #equalPrefixLength}, when {@code >= 1})
+     * followed by one single-joiner level each.
+     * Empty when the joiner has no joiners.
+     * For {@code [EQUAL, EQUAL, LESS_THAN]} this is {@code [2, 3]}
      * (one merged level spanning indices 0..1, then a single level at index 2).
      */
     private int[] levelEndIndices() {
@@ -229,12 +229,12 @@ public final class IndexerFactory<Right_> {
         var keyFunctionCount = keyFunctionList.size();
         return switch (keyFunctionCount) {
             case 1 -> {
-                var keyFunction = keyFunctionList.get(0);
+                var keyFunction = keyFunctionList.getFirst();
                 yield a -> CompositeKey.of(keyFunction.apply(a));
             }
             case 2 -> {
-                var keyFunction1 = keyFunctionList.get(0);
-                var keyFunction2 = keyFunctionList.get(1);
+                var keyFunction1 = keyFunctionList.getFirst();
+                var keyFunction2 = keyFunctionList.getLast();
                 yield a -> CompositeKey.of(keyFunction1.apply(a), keyFunction2.apply(a));
             }
             default -> a -> {
@@ -251,12 +251,12 @@ public final class IndexerFactory<Right_> {
         var keyFunctionCount = keyFunctionList.size();
         return switch (keyFunctionCount) {
             case 1 -> {
-                var keyFunction = keyFunctionList.get(0);
+                var keyFunction = keyFunctionList.getFirst();
                 yield tuple -> CompositeKey.of(keyFunction.apply(tuple.getA()));
             }
             case 2 -> {
-                var keyFunction1 = keyFunctionList.get(0);
-                var keyFunction2 = keyFunctionList.get(1);
+                var keyFunction1 = keyFunctionList.getFirst();
+                var keyFunction2 = keyFunctionList.getLast();
                 yield tuple -> {
                     var a = tuple.getA();
                     return CompositeKey.of(keyFunction1.apply(a), keyFunction2.apply(a));
@@ -329,10 +329,10 @@ public final class IndexerFactory<Right_> {
         }
         var keyFunctionCount = keyFunctionList.size();
         return switch (keyFunctionCount) {
-            case 1 -> toKeysExtractor(keyFunctionList.get(0));
+            case 1 -> toKeysExtractor(keyFunctionList.getFirst());
             case 2 -> {
-                var keyFunction1 = keyFunctionList.get(0);
-                var keyFunction2 = keyFunctionList.get(1);
+                var keyFunction1 = keyFunctionList.getFirst();
+                var keyFunction2 = keyFunctionList.getLast();
                 yield tuple -> {
                     var a = tuple.getA();
                     var b = tuple.getB();
@@ -411,10 +411,10 @@ public final class IndexerFactory<Right_> {
         }
         var keyFunctionCount = keyFunctionList.size();
         return switch (keyFunctionCount) {
-            case 1 -> toKeysExtractor(keyFunctionList.get(0));
+            case 1 -> toKeysExtractor(keyFunctionList.getFirst());
             case 2 -> {
-                var keyFunction1 = keyFunctionList.get(0);
-                var keyFunction2 = keyFunctionList.get(1);
+                var keyFunction1 = keyFunctionList.getFirst();
+                var keyFunction2 = keyFunctionList.getLast();
                 yield tuple -> {
                     var a = tuple.getA();
                     var b = tuple.getB();
@@ -496,10 +496,10 @@ public final class IndexerFactory<Right_> {
         }
         var keyFunctionCount = keyFunctionList.size();
         return switch (keyFunctionList.size()) {
-            case 1 -> toKeysExtractor(keyFunctionList.get(0));
+            case 1 -> toKeysExtractor(keyFunctionList.getFirst());
             case 2 -> {
-                var keyFunction1 = keyFunctionList.get(0);
-                var keyFunction2 = keyFunctionList.get(1);
+                var keyFunction1 = keyFunctionList.getFirst();
+                var keyFunction2 = keyFunctionList.getLast();
                 yield tuple -> {
                     var a = tuple.getA();
                     var b = tuple.getB();
@@ -536,7 +536,7 @@ public final class IndexerFactory<Right_> {
 
     public <T> Indexer<T> buildIndexer(boolean isLeftBridge) {
         Supplier<Indexer<T>> backendSupplier =
-                requiresRandomAccess ? RandomAccessLeafIndexer::new : LinkedListLeafIndexer::new;
+                joiner.requiresRandomAccess() ? RandomAccessLeafIndexer::new : LinkedListLeafIndexer::new;
         if (!hasJoiners()) { // NoneJoiner results in a bare backend (NoneIndexer).
             return backendSupplier.get();
         }
@@ -570,7 +570,7 @@ public final class IndexerFactory<Right_> {
                 if (joinerType == JoinerType.EQUAL) {
                     // Fuse the leaf-most equal indexer with its backend.
                     downstreamIndexerSupplier = () -> new EqualIndexer<>(KeyUnpacker.single(),
-                            requiresRandomAccess ? RandomAccessLeafIndexer::new : LinkedListLeafIndexer::new);
+                            joiner.requiresRandomAccess() ? RandomAccessLeafIndexer::new : LinkedListLeafIndexer::new);
                 } else {
                     KeyUnpacker<?> keyUnpacker = KeyUnpacker.single();
                     downstreamIndexerSupplier = () -> buildIndexerPart(isLeftBridge, joinerType, keyUnpacker, backendSupplier);
@@ -592,7 +592,7 @@ public final class IndexerFactory<Right_> {
      * and random access is not required.
      */
     public boolean isFusedEqualIndexEligible() {
-        return equalPrefixLength >= 1 && !requiresRandomAccess;
+        return equalPrefixLength >= 1 && !joiner.requiresRandomAccess();
     }
 
     /**
@@ -609,8 +609,7 @@ public final class IndexerFactory<Right_> {
         var joinerCount = joiner.getJoinerCount();
         // Pure-equal ⇒ the composite key IS the equal key (KeyUnpacker.single());
         // otherwise it is component 0.
-        KeyUnpacker<Object> topEqualKeyUnpacker =
-                equalPrefixLength == joinerCount ? KeyUnpacker.single() : KeyUnpacker.composite(0);
+        var topEqualKeyUnpacker = equalPrefixLength == joinerCount ? KeyUnpacker.single() : KeyUnpacker.composite(0);
         if (equalPrefixLength == joinerCount) {
             // Pure equal: the per-side downstream is just the tuple list; the bucket is the equal-key group.
             return new FusedEqualIndex<>(topEqualKeyUnpacker, false, LinkedListLeafIndexer::new, LinkedListLeafIndexer::new);
@@ -624,14 +623,11 @@ public final class IndexerFactory<Right_> {
 
     private <T> Indexer<T> buildIndexerPart(boolean isLeftBridge, JoinerType joinerType, KeyUnpacker<?> keyUnpacker,
             Supplier<Indexer<T>> downstreamIndexerSupplier) {
-        // Note that if creating indexer for a right bridge node, the joiner type has to be flipped.
-        // (<A, B> becomes <B, A>.)
-        // This does not apply if random access is required,
-        // because in that case we create a right bridge only,
-        // and we query it from the left.
-        // TODO Does the requiresRandomAccess check make sense?
-        //      Shouldn't a right bridge always flip, even if there is no left bridge?
-        if (!isLeftBridge && !requiresRandomAccess) {
+        // A right bridge node stores B, keyed by rightMapping, and is queried using A's leftMapping-derived key.
+        // The joiner type has to be flipped to translate "leftMapping(A) OP rightMapping(B)"
+        // into the equivalent "storedKey OP' queryKey" relation,
+        // regardless of whether a left bridge also exists to pair with it.
+        if (!isLeftBridge) {
             joinerType = joinerType.flip();
         }
         return switch (joinerType) {
